<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SafetyTips">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/creamy"
        android:gravity="left"
        android:padding="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/creamy"
        android:gravity="left"
        android:layout_marginTop="20dp"

        android:padding="4dp"
        android:text="@string/second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"

            android:padding="4dp"
            android:text="@string/third"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:padding="6dp"
            android:text="@string/fourth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/fifth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/six"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/seven"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/eight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/nine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creamy"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/ten"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</ScrollView>